# autofix

./: .gitignore  README.md  conftest.py  crontab.txt  deep-research-report.md  demo_llm_prompt.py  install.sh  pyproject.toml
autofix/: __init__.py  __main__.py  agent_loop.py  app.py  backend.py  benchmarking.py  cli.py  config.py  crawler.py  daemon.py  defaults.py  detectors.py  dynos_backend.py  init.py  llm_backend.py  output.py  platform.py  repo.py  routing.py  scan_all.py  scanner.py  state.py
autofix/llm_io/: __init__.py  prompting.py  validation.py
autofix/llm_io/prompts/: agent_fix_system.md  agent_review_system.md  haiku_review.md  haiku_review_chunk.md  llm_format_repair.md  llm_regenerate.md
autofix/runtime/: __init__.py  core.py  defaults.py  dynos.py
autofix_next/: __init__.py
autofix_next/analyzers/: __init__.py
autofix_next/analyzers/cheap/: __init__.py  unused_import.py
autofix_next/cli/: __init__.py  main.py  scan_command.py
autofix_next/dedup/: __init__.py  cascade.py  cluster_store.py  embedding.py  simhash.py
autofix_next/events/: __init__.py  change_detector.py  ingress.py  schema.py
autofix_next/evidence/: __init__.py  builder.py  fingerprints.py  schema.py
autofix_next/funnel/: __init__.py  pipeline.py
autofix_next/indexing/: __init__.py  scip_emitter.py  scip_index.py  symbols.py
autofix_next/invalidation/: __init__.py  call_graph.py  import_resolver.py  planner.py
autofix_next/languages/: __init__.py  bin_cache.py  go.py  jsts.py  python.py
autofix_next/llm/: __init__.py  scheduler.py
autofix_next/llm/prompts/: unused_import_review.md
autofix_next/parsing/: __init__.py  tree_sitter.py
autofix_next/ranking/: __init__.py  priority_scorer.py  signals.py
autofix_next/telemetry/: __init__.py  events_log.py  sarif.py
benchmarks/agent_bench/: README.md  __init__.py  autofix_adapter.py  run_autofix_benchmark.py  tasks_to_fixtures.py
benchmarks/agent_bench/tasks/bugfix_port_parser/: task.json
benchmarks/agent_efficiency/: README.md  RESEARCH.md  __init__.py  metrics.py  runner.py  suite.json
benchmarks/agent_efficiency/adapters/: autofix_standalone.json  autofix_standalone.py  mock_agent.json  mock_agent.py
benchmarks/agent_efficiency/instrumentation/: __init__.py  bootstrap.py  core.py  example_patch_config.json
benchmarks/agent_efficiency/tasks/bugfix_take_limit/: task.json
docs/: AGENTIC_LLM_BACKENDS.md  AGENT_BENCH_INTEGRATION.md  AUTOFIX_CLEANUP_TODO.md  AUTOFIX_STANDALONE.md
docs/rewrite/: README.md  gap-analysis.md  roadmap.md  target-architecture.md
tests/: conftest.py  test_agent_bench_integration.py  test_agent_benchmark_instrumentation.py  test_agent_benchmark_metrics.py  test_agent_loop.py  test_agent_loop_enforcement.py  test_app_entrypoints.py  test_backend_model_selection.py  test_config.py  test_crawler.py  test_daemon.py  test_detectors.py  test_init.py  test_llm_backend.py  test_llm_io_validation.py  test_output.py  test_packaging.py  test_repo.py  test_scan_all.py  test_standalone_runtime.py
tests/autofix_next/: test_analyzers_unused_import.py  test_change_detector.py  test_events_log_compat.py  test_events_schema.py  test_evidence_builder.py  test_evidence_schema_conformance.py  test_integration_self_scan.py  test_llm_scheduler.py  test_parsing_tree_sitter.py  test_prompt_prefix_hash_golden.py  test_replay_determinism.py  test_sarif_emitter.py
tests/autofix_next/dedup/: __init__.py  conftest.py  test_cascade.py  test_cluster_store.py  test_embedding_tier.py  test_historical_replay.py  test_simhash.py
tests/autofix_next/indexing/: conftest.py  test_call_graph_wrapper.py  test_scip_emitter.py  test_scip_index.py  test_scip_index_benchmark.py  test_scip_index_real_repo.py
tests/autofix_next/invalidation/: test_call_graph.py  test_graph_builder.py  test_import_resolver.py  test_pipeline_integration.py  test_planner.py  test_planner_algorithmic.py
tests/autofix_next/languages/: conftest.py  test_bin_cache.py  test_go_adapter.py  test_jsts_adapter.py  test_pipeline_integration.py  test_python_adapter_shim.py  test_registry.py
tests/autofix_next/ranking/: __init__.py  test_priority_scorer.py  test_signals.py
tests/rewrite_docs/: test_rewrite_docs.py
(+15 files in other folders)
