[project]
name = "autofix-scanner"
version = "0.1.0"
description = "Standalone codebase scanner and Dynos-backed autofix runner"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Hassam Sheikh", email = "hassamsheikh1@gmail.com" },
]

[project.scripts]
autofix = "autofix.app:main"

[project.optional-dependencies]
benchmark = [
    # agent-bench is a sibling repo; install with:
    #   pip install -e ../agent-bench
    # or point --agent-bench-root at the checkout directory.
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autofix*"]

[tool.setuptools.package-data]
"autofix.llm_io" = ["prompts/*.md"]
